--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -13,7 +13,7 @@
         "name": "Isaac",
         "stylizedName": "<strong>**Isaac**</strong>",
         "logoUrl": "images/svg/logo.svg",
-        "profilePictureUrl": "images/pictures/avatar.jpg",
+        "profilePictureUrl": "images/pictures/Capturar.PNG",
 
         "locales": {
             "en": {"role": "Web Developer"},
